[project]
name = "pv-organizer"
version = "2.0.0"
authors = [{name = "Alic Znapy", email = "AlicZnapy@gmail.com"},]
requires-python = ">=3.12"
dependencies = [
    "pillow>=10.2",
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
# development dependency groups
dev = [
    "mypy>=1.8",
    "types-Pillow>=10.2",
    "opencv-stubs[opencv-headless]",
    "pylint>=3.0",
    "python-lsp-server[pycodestyle,pydocstyle,mccabe,pyflakes,rope,yapf,autopep8]>=1.10",
    "pylsp-mypy>=0.6.8",
    "spyder-kernels>=2.5",
    "pytest>=8.0.1",
]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
python_executable = "/home/alic/Projects/pv-organizer/.venv/bin/python"
